Se agrega carpetas

--- a/index.html
+++ b/index.html
@@ -10,10 +10,21 @@
 </head>
 <body>
 
-
+<!-- 
 <script src="./javaScript/main.js"></script>
 <script src="./javaScript/main1.js"></script>
-<script src="./javaScript/main2.js"></script>
+<script src="./javaScript/main2.js"></script> -->
+
+<!-- <script src="./javaScript/SimuladorInteractivo.js"></script> -->
+
+
+<!-- Class 4 -->
+<!-- <script src="./claseFunciones/funciones.js"></script> -->
+
+<!-- <script src="./afterClass2/after2.js"></script> -->
+
+<!-- class DOM -->
+<script src="./Array/main.js"></script>
 
 </body>
 </html>
